# WeatherFromWeb-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
WeatherFromWeb/: CMakeLists.txt  config.json
WeatherFromWeb/include/: WeatherFromWeb.h
WeatherFromWeb/src/: WeatherFromWeb.cpp
example/: CMakeLists.txt  main.cpp
